--- a/assets/css/homecustom.css
+++ b/assets/css/homecustom.css
@@ -43,7 +43,8 @@ body{
 .px-4{ padding-left:16px; padding-right:16px; }
 .px-8{ padding-left:32px; padding-right:32px; }
 .py-12{ padding-top:48px; padding-bottom:48px; }
-.py-12{ padding-top:48px; padding-bottom:48px; } 
+.py-12{ padding-top:48px; padding-bottom:48px; }
+.py-16{padding-top: 100px; padding-bottom: 100px ;} 
 .space-y-20 > * + *{ margin-top:80px; }
 
 .gap-4{ gap:16px; }
@@ -114,6 +115,7 @@ body{
 .w-20{ width:80px; }
 .w-24{ width:96px; }
 .w-32{ width:128px; }
+.w-64{width: 256px;}
 .w-1\/2{ width:50%; }
 .w-3\/4{ width:75%; }
 .w-full{ width:100%; }
@@ -286,7 +288,8 @@ button{
 
 @media (min-width:1024px){
   .lg\:block{ display:block; }
-  .lg\:grid-cols-5{ grid-template-columns:repeat(6,minmax(0,1fr)); } /* 10 colunas para mais flexibilidade */
+  .lg\:grid-cols-5{ grid-template-columns:repeat(5,minmax(0,1fr)); } 
+   .lg\:grid-cols-8{ grid-template-columns:repeat(8,minmax(0,1fr)); } /* 10 colunas para mais flexibilidade */
 }
 
 
